add files and folders for team

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CoffeeJoy</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" type="image/svg+xml" href="./src/public/favicon.svg">
+    <link rel=" preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Quicksand:wght@300..700&display=swap"
         rel="stylesheet">
@@ -16,24 +17,24 @@
 </head>
 
 <body>
-    <load src="./src/css/partials/header.html" />
+    <load src="./src/partials/header.html" />
 
     <main>
-        <load src="./src/css/partials/hero.html" />
-        <load src="./src/css/partials/welcome.html" />
-        <load src="./src/css/partials/quality.html" />
-        <load src="./src/css/partials/moments.html" />
-        <load src="./src/css/partials/subscribe.html" />
-        <load src="./src/css/partials/coments.html" />
-        <load src="./src/css/partials/location.html" />
+        <load src="./src/partials/hero.html" />
+        <load src="./src/partials/welcome.html" />
+        <load src="./src/partials/quality.html" />
+        <load src="./src/partials/experience.html" />
+        <load src="./src/partials/subscribe.html" />
+        <load src="./src/partials/testimonials.html" />
+        <load src="./src/partials/location.html" />
     </main>
 
     <footer>
-        <load src="./src/css/partials/footer.html" />
+        <load src="./src/partials/footer.html" />
     </footer>
 
-    <load src="./src/css/partials/modal-mobile.html" />
-    <load src="./src/css/partials/extra.html" />
+    <load src="./src/partials/mobile-menu.html" />
+    <load src="./src/partials/extra.html" />
 
 </body>
 
