--- a/src/index.html
+++ b/src/index.html
@@ -1,41 +1,46 @@
 <!doctype html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CoffeeJoy</title>
     <link rel="icon" type="image/svg+xml" href="./src/public/favicon.svg" />
     <link rel=" preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Quicksand:wght@300..700&display=swap"
-        rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
-        integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Aboreto&family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/main.css" />
-</head>
+  </head>
 
-<body>
-
+  <body>
     <load src="partials/header.html" />
 
     <main>
-        <load src="partials/hero.html" />
-        <load src="partials/welcome.html" />
-        <load src="partials/quality.html" />
-        <load src="partials/experience.html" />
-        <load src="partials/subscribe.html" />
-        <load src="partials/testimonials.html" />
-        <load src="partials/location.html" />
+      <load src="partials/hero.html" />
+      <load src="partials/welcome.html" />
+      <load src="partials/quality.html" />
+      <load src="partials/experience.html" />
+      <load src="partials/subscribe.html" />
+      <load src="partials/testimonials.html" />
+      <load src="partials/location.html" />
     </main>
 
     <footer>
-        <load src="partials/footer.html" />
+      <load src="partials/footer.html" />
     </footer>
 
     <load src="partials/mobile-menu.html" />
     <load src="partials/extra.html" />
-</body>
 
+    <script type="module" src="/main.js"></script>
+  </body>
 </html>
